libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/MYGDA.NSG
DEFINE DATA GLOBAL
1 #VAR (A10)
END-DEFINE
